--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,4 @@
-name = "worker-typescript-template"
+name = "onebot-worker"
 type = "javascript"
 zone_id = ""
 account_id = ""
@@ -10,7 +10,7 @@ local_protocol = "http"
 upstream_protocol = "http"
 
 [build]
-command = "npm install && npm run build"
+command = "npm run build"
 
 [build.upload]
 format = "service-worker"
